tests/res/match/error_or_differing_binders.say
// Every alternative of an or-matcher must bind the same names.
type P { pub x; init(a) { this.x = a; } }
say v = { x: 1 };
match v {
    is P { x } | { y } => print(x), // error: or-matcher alternatives must bind the same names
    _ => print("no"),
}
